Added sourcing to images in menu

--- a/menu.html
+++ b/menu.html
@@ -14,17 +14,17 @@
     <header class="menu-header">
         <h1> Menu  </h1>
     </header>
-    <!-- this is the container for the menu itself, divided into sections to help screen readers-->
+    <!-- this is the container for the whole menu, divided into sections to help screen readers-->
      <div class="menu">
      <section>
 
-        <!-- This is category 1 -->
+        <!-- This is the section containing sandwiches -->
          <h2 class="menu-group-heading">
           Sandwiches
          </h2>
 
-            <!-- Div pertaining the menu group individually -->
             <div class="menu-group">
+                <!-- Image is taken from https://unsplash.com/photos/07RKITgmScQ , by Farhad Ibrahimzade-->
              <div class="menu-item">
                 <img src="pics/farhad-ibrahimzade-07RKITgmScQ-unsplash.jpg" alt="Chicken teriyaki sandwich" class="menu-item-img">
                 <div class="menu-item-text">
@@ -40,6 +40,7 @@
              </div>
 
              <div class="menu-item">
+                <!-- Image is taken from https://unsplash.com/photos/Znvxeud6sDc , by Raphael Nogueira-->
                 <img src="pics/raphael-nogueira-Znvxeud6sDc-unsplash.jpg" alt="Ham and cheese sandwich" class="menu-item-img">
                 <div class="menu-item-text">
                     <h3 class="menu-item-heading">
@@ -54,6 +55,7 @@
              </div>
 
              <div class="menu-item">
+                <!-- Image is taken from https://unsplash.com/photos/Z7X1PPL_r2k , by Eiliv Aceron-->
                 <img src="pics/eiliv-aceron-Z7X1PPL_r2k-unsplash.jpg" alt="Vegan sandwich" class="menu-item-img">
                 <div class="menu-item-text">
                     <h3 class="menu-item-heading">
@@ -70,6 +72,7 @@
          </div>
          </section>
 
+         <!-- This is the section containing salads-->
          <section>
          <h2 class="menu-group-heading">
             Salads
@@ -77,6 +80,7 @@
 
          <div class="menu-group">
             <div class="menu-item">
+                <!-- This image was taken from https://unsplash.com/photos/D3lKRy7A_FY , by Rui Silvestre-->
                 <img src="pics/rui-silvestre-D3lKRy7A_FY-unsplash.jpg" alt="pasta salad" class="menu-item-img">
                 <div class="menu-item-text">
                     <h3 class="menu-item-heading">
@@ -94,6 +98,7 @@
             </div>
 
             <div class="menu-item">
+                <!-- This image was taken from https://unsplash.com/photos/V1K5Z5KERsw , by Yehleen Gaffney-->
                 <img src="pics/yehleen-gaffney-V1K5Z5KERsw-unsplash.jpg" alt="Caesar salad" class="menu-item-img">
                 <div class="menu-item-text">
                     <h3 class="menu-item-heading">
@@ -111,6 +116,7 @@
             </div>
 
             <div class="menu-item">
+                <!-- This image was taken from https://unsplash.com/photos/liRzVVBbxnM , by Sebastian Doll-->
                 <img src="pics/sebastian-doll-liRzVVBbxnM-unsplash.jpg" alt="Salmon bowl" class="menu-item-img">
                 <div class="menu-item-text">
                     <h3 class="menu-item-heading">
@@ -129,6 +135,7 @@
         </div>
     </section>
 
+    <!-- This is the section containing desserts-->
     <section>
         <h2 class="menu-group-heading">
             Desserts
@@ -136,7 +143,7 @@
 
         <div class="menu-group">
             <div class="menu-item">
-                <!-- Hentet fra  -->
+                <!-- This image was taken from https://unsplash.com/photos/Li2zmWtG8Ns , by Nati Melnychuk-->
                 <img src="pics/nati-melnychuk-Li2zmWtG8Ns-unsplash.jpg" alt="" class="menu-item-img">
                 <div class="menu-item-text">
                     <h3 class="menu-item-heading">
@@ -154,6 +161,7 @@
             </div>
 
             <div class="menu-item">
+                <!-- This image was taken from Nati Melnychuk , by K8-->
                 <img src="pics/k8-k3U_ozfoLKo-unsplash.jpg" alt="Carrot cake" class="menu-item-img">
                 <div class="menu-item-text">
                 <h3 class="menu-item-heading">
@@ -171,6 +179,7 @@
         </div>
 
         <div class="menu-item">
+            <!-- This picture was taken from https://unsplash.com/photos/FOopaDnDyZg , by Scott Gummerson-->
             <img src="pics/scott-gummerson-FOopaDnDyZg-unsplash.jpg" alt="Cinnamon bun" class="menu-item-img">
             <div class="menu-item-text">
                 <h3 class="menu-item-heading">
@@ -188,6 +197,7 @@
         </div>
 
         <div class="menu-item">
+            <!-- This picture was taken from https://unsplash.com/photos/GbCEo-Nwyj4 , by Tanaphong Toochinda-->
             <img src="pics/tanaphong-toochinda-GbCEo-Nwyj4-unsplash.jpg" alt="Fruit cup" class="menu-item-img">
             <div class="menu-item-text">
                 <h3 class="menu-item-heading">
@@ -206,6 +216,7 @@
      </div>
     </section>
 
+    <!-- This is the section containing drinks-->
     <section>
         <h2 class="menu-group-heading">
             Drinks
@@ -214,6 +225,7 @@
         <div class="menu-group">
 
         <div class="menu-item">
+            <!-- Thip picture was taken from https://unsplash.com/photos/ikU3J1nr52w , by Nathan Dumlao-->
             <img src="pics/nathan-dumlao-ikU3J1nr52w-unsplash.jpg" alt="Four cups of coffee" class="menu-item-img">
             <div class="menu-item-text">
                 <h3 class="menu-item-heading">
@@ -231,6 +243,7 @@
         </div>
 
         <div class="menu-item">
+            <!-- This picture was taken from https://unsplash.com/photos/TgQkxQc-t_U , by Withney Wright-->
             <img src="pics/whitney-wright-TgQkxQc-t_U-unsplash.jpg" alt="Three cups of juice" class="menu-item-img">
             <div class="menu-item-text">
                 <h3 class="menu-item-heading">
