--- a/booking.html
+++ b/booking.html
@@ -11,8 +11,7 @@
     <div class="containers">
         <div class="container1">
             <h1>
-                87 restaurent
-            </h1>
+                House of buns             </h1>
               <h3>opening time  </h3>
               <p>Monday - Friday : 10:00 - 00:00</p>  
               <p>Saturday - sunday : 12:00 - 22:00</p>    
