--- a/booking.html
+++ b/booking.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css"> 
     <title>Booking</title>
 </head>
+<style>
+    .body{
+        background-image: url(https://images.unsplash.com/photo-1484156818044-c040038b0719?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+
+    }
+</style>
+
 <body>
     <div class="containers">
         <div class="container1">
