--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             </div>
             <nav class="van-elements">
                 <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">BOOKING</a></li>
-                    <li><a href="#">MENU</a></li>
-                    <li><a href="#">ACCESSIBILITY</a></li>
-                    <li><a href="#">TOPICAL</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="booking.html">BOOKING</a></li>
+                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="accessibility.html">ACCESSIBILITY</a></li>
+                    <li><a href="topical.html">TOPICAL</a></li>
                 </ul>
             </nav>
             <a href="#" class="logo">Logo</a>
