--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </nav>
             <a href="#" class="logo">Logo</a>
         </header>
+        <div class="fix"></div>
         <!--the body for home page-->
         <section class="contain"></section>
 
