--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <nav class="van-elements">
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="index.html" class="active">HOME</a></li>
                     <li><a href="booking.html">BOOKING</a></li>
                     <li><a href="menu.html">MENU</a></li>
                     <li><a href="accessibility.html">ACCESSIBILITY</a></li>
@@ -24,7 +24,7 @@
             </nav>
             <a href="#" class="logo">Logo</a>
         </header>
-        <div class="fix"></div>
+        
         <!--the body for home page-->
         <section class="contain"></section>
 
