--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </footer>
 
 
-
+        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="java.js"></script>
     </body>
 </html>
