--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 <div>
                     <h2>Contact us:</h2>
-                    <p>eventhouse@evenhous.oo</p>
+                    <p> <i class="fa-solid fa-envelope"></i> eventhouse@evenhous.oo</p>
                     <p>Telephone number: <a href="#">+47 000 00 000</a></p>
                 </div>
 
