--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="indes-style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
         <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/5196aeeac3.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
 
     <body>
@@ -45,10 +45,17 @@
                     <p>Sunday: 10:00 - 18:00.</p>
                 </div>
 
-                <div>
+                <div class="contact-info">
                     <h2>Contact us:</h2>
-                    <p> <i class="fa-solid fa-envelope"></i> eventhouse@evenhous.oo</p>
-                    <p>Telephone number: <a href="#">+47 000 00 000</a></p>
+                    <p> <i class="fa-regular fa-envelope"></i> eventhouse@evenhous.oo</p>
+                    <p><i class="fa-solid fa-phone-volume"></i> <a href="#">+47 000 00 000</a></p>
+                    <h2>Social media</h2>
+                    <div class="Social-media">
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-snapchat"></i></a>
+                    </div>
                 </div>
 
                 <div>
