--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<html>
+<!DOCTYPE html>
+<htm lang="en">
     <head>
         <title>Event House</title>
         <link rel="stylesheet" href="indes-style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
         <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
@@ -69,6 +69,7 @@
         </footer>
 
 
-        
+        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+        <script src="java.js"></script>
     </body>
 </html>
