added allergens, changed colour

--- a/menu.html
+++ b/menu.html
@@ -36,6 +36,7 @@
                         </span>
                     </h3>
                     <p class="menu-item-description"> A baguette with freshly cut tomato, crunchy iceberg leaves, creamy mayonnaise and juicy, teriyaki matinated chicken. </p>
+                    <p class="allergens">Contains soy, gluten, egg, milk, traces of nuts</p>
                 </div>
              </div>
 
@@ -51,6 +52,7 @@
                         </span>
                     </h3>
                     <p class="menu-item-description">  A buttered baguette with freshly cut tomatoes, crunchy iceberg leaves, thinly sliced paprika atop of sliced cheese and smoked ham. </p>
+                    <p class="allergens">Contains gluten, milk</p>
                 </div>
              </div>
 
@@ -67,6 +69,7 @@
                     </h3>
                     <p class="menu-item-description"> A wholegrain baguette with homemade hummus, freshly sliced tomatoes, crunchy iceberg leaves and our special fried tofu, topped off with bean sprouts.
                      </p>
+                     <p class="allergens">Contains gluten, chickpeas, soy. </p>
                 </div>
              </div>
          </div>
@@ -94,6 +97,7 @@
                     <p class="menu-item-description">
                         A savoury salad with perectly al-dente pasta, chopped tomato, ruccola salad, thinly sliced apple and fried chickpeas tossed in light olive oil dressing and topped with sesame seeds.
                     </p>
+                    <p class="allergens">Contains gluten, chickpeas, sesame.</p>
                 </div>
             </div>
 
@@ -112,6 +116,7 @@
                     <p class="menu-item-description">
                         Chopped romaine lettuce and chopped cherry tomatoes tossed in olive oil and creamy dressing and topped with lemon juice, parmesan and pine nuts.
                     </p>
+                    <p class="allergens">Contains milk, citrus, nuts.</p>
                 </div>
             </div>
 
@@ -130,6 +135,7 @@
                 <p class="menu-item-description">
                     A delicious lunchbowl consisting of freshly made white rice, quinoa, raw salmon, edamame beans, pickled japanese radish and cucumbers, topped with sesame seeds.
                 </p>
+                <p class="allergens">Contains gluten, seafood, sesame</p>
                 </div>
             </div>
         </div>
@@ -157,6 +163,7 @@
                     <p class="menu-item-description">
                         A freshly baked delicous butterdough croissant topped with some fresh seasonal fruit. Can be ordered with chocolate for an extra delicious experience.
                     </p>
+                    <p class="allergen">Contains gluten, milk.</p>
                 </div>
             </div>
 
@@ -175,6 +182,7 @@
                 <p class="menu-item-description">
                     Fresh, classic home-style carrot cake with a thick lime cream, topped with round chocolate sprinkles. Goes perfect with a dark coffee.
                 </p>
+                <p class="allergens">Contains citrus, milk, traces of nuts.</p>
             </div>
         </div>
 
@@ -193,6 +201,7 @@
                 <p class="menu-item-description">
                     A large, fluffy cinnamon bun, inspired by the american cinnabons. Covered in a delicious milky frosting, served warm. 
                 </p>
+                <p class="allergens">Contains gluten, milk, soy</p>
             </div>
         </div>
 
@@ -211,6 +220,7 @@
                 <p class="menu-item-description">
                     A small cup with sweetened mascarpone and yoghurt, topped with caramelised nuts and fresh fruit and berries.
                 </p>
+                <p class="allergen">Contains milk, nuts</p>
             </div>
         </div>
      </div>
@@ -239,6 +249,7 @@
                 <p class="menu-item-description">
                     A different assortments of coffee, where you can choose between classics such as cappuccino, macchiato, americano, latte, and iced coffee.
                 </p>
+                <p class="allergens">Contains milk, can be made with dairy alternatives</p>
             </div>
         </div>
 
