--- a/menu.html
+++ b/menu.html
@@ -8,12 +8,28 @@
     <title>Menu</title>
 </head>
 <body>
-
+    <!--Nav bar-->
+    <header>
+        <section class="header-nav">
+            <a href="#" class="logo"><i class="fa-solid fa-house"></i>eventhouse</a>
+            <nav>
+                <ul>
+                    <li><a href="#" class="active">Home</a></li>
+                    <li><a href="#">Booking</a></li>
+                    <li><a href="#">Menu</a></li>
+                    <li><a href="#">Topical</a></li>
+                    <li><a href="#">Accessibility</a></li>
+                </ul>
+            </nav>
+           <div class="menu-toggle"><i class="fas fa-bars" aria-hidden="true"></i></div>
+        </section>
+    </header>
+    
 <!-- Main container to make the webpage build more understandable for screen readers-->
 <main class="menu-main">
-    <header class="menu-header">
+    <div class="menu-header">
         <h1> Menu  </h1>
-    </header>
+    </div>
     <!-- this is the container for the whole menu, divided into sections to help screen readers-->
      <div class="menu">
      <section>
