--- a/menu.html
+++ b/menu.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style-header.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Menu</title>
 </head>
 <body>
     <!--Nav bar-->
     <header>
         <section class="header-nav">
-            <a href="#" class="logo"><i class="fa-solid fa-house"></i>eventhouse</a>
+            <a href="#" class="logo"><i class="fa-solid fa-house"></i>The Taste</a>
             <nav>
                 <ul>
                     <li><a href="#" class="active">Home</a></li>
@@ -24,7 +26,7 @@
            <div class="menu-toggle"><i class="fas fa-bars" aria-hidden="true"></i></div>
         </section>
     </header>
-    
+
 <!-- Main container to make the webpage build more understandable for screen readers-->
 <main class="menu-main">
     <div class="menu-header">
@@ -291,6 +293,41 @@
 
 </div>
 </main>
+<footer>
+        <section class="footer-info">
 
+            <div class="open-time">
+                <p class="title-info">Opening time</p>
+                <p>Mondy to friday: 08:00 - 22:00.</p>
+                <p>Saturday: 10:00 - 18:00.</p>
+                <p>Sunday: 10:00 - 18:00.</p>
+            </div>
+
+            <div class="contact-info">
+                <p class="title-info">Contact us</p>
+                <p> <i class="fa-regular fa-envelope"></i> eventhouse@evenhous.oo</p>
+                <p><i class="fa-solid fa-phone-volume"></i> <a href="#">+47 000 00 000</a></p>
+                <p class="title-info">Social media</p>
+                <div class="Social-media">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-snapchat"></i></a>
+                </div>
+            </div>
+
+            <div class="location">
+                <p class="title-info">Location</p>
+                <p>Pilestredet 46, 0167 Oslo</p>
+                <div class="map-info">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7998.66552499034!2d10.7333234!3d59.921084!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd56463578e04ce80!2sOsloMet%20%E2%80%93%20storbyuniversitetet!5e0!3m2!1sen!2sno!4v1669648131868!5m2!1sen!2sno" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </section>
+    </footer>
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+        <script src="javaS.js"></script>
 </body>
 </html>
