added allergen and removed weird punctuation

--- a/menu.html
+++ b/menu.html
@@ -87,7 +87,7 @@
                     </h3>
                     <p class="menu-item-description"> A wholegrain baguette with homemade hummus, freshly sliced tomatoes, crunchy iceberg leaves and our special fried tofu, topped off with bean sprouts.
                      </p>
-                     <p class="allergens">Contains gluten, chickpeas, soy. </p>
+                     <p class="allergens">Contains gluten, chickpeas, soy </p>
                 </div>
              </div>
          </div>
@@ -115,7 +115,7 @@
                     <p class="menu-item-description">
                         A savoury salad with perectly al-dente pasta, chopped tomato, ruccola salad, thinly sliced apple and fried chickpeas tossed in light olive oil dressing and topped with sesame seeds.
                     </p>
-                    <p class="allergens">Contains gluten, chickpeas, sesame.</p>
+                    <p class="allergens">Contains gluten, chickpeas, sesame</p>
                 </div>
             </div>
 
@@ -134,7 +134,7 @@
                     <p class="menu-item-description">
                         Chopped romaine lettuce and chopped cherry tomatoes tossed in olive oil and creamy dressing and topped with lemon juice, parmesan and pine nuts.
                     </p>
-                    <p class="allergens">Contains milk, citrus, nuts.</p>
+                    <p class="allergens">Contains milk, citrus, nuts</p>
                 </div>
             </div>
 
@@ -181,7 +181,7 @@
                     <p class="menu-item-description">
                         A freshly baked delicous butterdough croissant topped with some fresh seasonal fruit. Can be ordered with chocolate for an extra delicious experience.
                     </p>
-                    <p class="allergen">Contains gluten, milk.</p>
+                    <p class="allergen">Contains gluten, milk</p>
                 </div>
             </div>
 
@@ -200,7 +200,7 @@
                 <p class="menu-item-description">
                     Fresh, classic home-style carrot cake with a thick lime cream, topped with round chocolate sprinkles. Goes perfect with a dark coffee.
                 </p>
-                <p class="allergens">Contains citrus, milk, traces of nuts.</p>
+                <p class="allergens">Contains citrus, milk, traces of nuts</p>
             </div>
         </div>
 
@@ -286,6 +286,7 @@
                 <p class="menu-item-description">
                     Juice served in a tall glass with some decoration fit for the season. We have an assortment of apple juice, orange juice, cherry juice and tropical fruits juice.
                 </p>
+                <p class="allergens">Can contain citrus</p>
             </div>
         </div>
     </div>
