--- a/menu.html
+++ b/menu.html
@@ -298,7 +298,7 @@
         <section class="footer-info">
 
             <div class="open-time">
-                <p class="title-info">Opening time</p>
+                <p class="title-info">Opening hours</p>
                 <p>Mondy to friday: 08:00 - 22:00.</p>
                 <p>Saturday: 10:00 - 18:00.</p>
                 <p>Sunday: 10:00 - 18:00.</p>
@@ -306,7 +306,7 @@
 
             <div class="contact-info">
                 <p class="title-info">Contact us</p>
-                <p> <i class="fa-regular fa-envelope"></i> eventhouse@evenhous.oo</p>
+                <p> <i class="fa-regular fa-envelope"></i> thetaste@event.no</p>
                 <p><i class="fa-solid fa-phone-volume"></i> <a href="#">+47 000 00 000</a></p>
                 <p class="title-info">Social media</p>
                 <div class="Social-media">
