--- a/Topical.html
+++ b/Topical.html
@@ -13,7 +13,7 @@
    <!--This is the heading-->
   <header class="header">
 	<h1>Big data and artificial intelligence </h1>
-	<h2 class="heading2">Consider the role of algorithms play in your daily life, at home, and at work. Confront your reflection with your group</h2> dhfgdr
+	<h2 class="heading2">Consider the role of algorithms play in your daily life, at home, and at work. Confront your reflection with your group</h2>
 </header>
   <figure class="featured-image-1">
       <img src="img0.png" alt="Photo by PhonlamaiPhoto's Images on Canva">
@@ -52,6 +52,7 @@
     <div class="firstpart">
   </article>
   <figure class="featured-image-4">
+    <!-- this photo was taken from (link) by (photographer)-->
       <img src="img6.png" alt="Photo by PhonlamaiPhoto's Images on Canva">
    </figure>
    <!--Number 3 stops here-->
