tried to fix weird boxing issue

--- a/menu.html
+++ b/menu.html
@@ -168,7 +168,7 @@
         <div class="menu-group">
             <div class="menu-item">
                 <!-- This image was taken from https://unsplash.com/photos/Li2zmWtG8Ns , by Nati Melnychuk-->
-                <img src="pics/nati-melnychuk-Li2zmWtG8Ns-unsplash.jpg" alt="" class="menu-item-img">
+                <img src="pics/nati-melnychuk-Li2zmWtG8Ns-unsplash.jpg" alt="Croissant with strawberry on top" class="menu-item-img">
                 <div class="menu-item-text">
                     <h3 class="menu-item-heading">
                         <span class="menu-item-name">
@@ -181,7 +181,7 @@
                     <p class="menu-item-description">
                         A freshly baked delicous butterdough croissant topped with some fresh seasonal fruit. Can be ordered with chocolate for an extra delicious experience.
                     </p>
-                    <p class="allergen">Contains gluten, milk</p>
+                    <p class="allergens">Contains gluten, milk</p>
                 </div>
             </div>
 
@@ -307,7 +307,7 @@
             <div class="contact-info">
                 <p class="title-info">Contact us</p>
                 <p> <i class="fa-regular fa-envelope"></i> thetaste@event.no</p>
-                <p><i class="fa-solid fa-phone-volume"></i> <a href="#">+47 000 00 000</a></p>
+                <p><i class="fa-solid fa-phone-volume"></i> <a href="#">+47 123 45 678</a></p>
                 <p class="title-info">Social media</p>
                 <div class="Social-media">
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
