tried to fix fold setting

--- a/menu.html
+++ b/menu.html
@@ -238,7 +238,7 @@
                 <p class="menu-item-description">
                     A small cup with sweetened mascarpone and yoghurt, topped with caramelised nuts and fresh fruit and berries.
                 </p>
-                <p class="allergen">Contains milk, nuts</p>
+                <p class="allergens">Contains milk, nuts</p>
             </div>
         </div>
      </div>
