fixed links in navbar

--- a/Topical.html
+++ b/Topical.html
@@ -25,7 +25,7 @@
   <article class="article article-1">
     <div class="firstpart">
 	<h2>Part Of Our Lives</h2>
-    <p>We discussed that <a href="https://www.geeksforgeeks.org/introduction-to-algorithms/">algorithms</a> play a crucial part in our life since, there is basically no part in our day-to-day life which involves electricity but doesn’t involve algorithms. <br> At home algorithms obviously impact our life when we use our computers or smartphones. But also, when we cook and the oven realises itself when the desired temperature is reached, or the induction stove turns itself off after all the stovetops are turned to zero.</p>
+    <p>We discussed that <a href="https://www.geeksforgeeks.org/introduction-to-algorithms/">algorithms</a> play a crucial part in our life since, there is basically no part in our day-to-day life which involves electricity but <em>doesn't</em> involve algorithms. <br> At home, algorithms obviously impact our life when we use our computers or smartphones. But also, when we cook and the oven realises itself when the desired temperature is reached, or the induction stove turns itself off after all the stovetops are turned to zero.</p>
   </div>
   </article>
   <figure class="featured-image-2">
