--- a/menu.html
+++ b/menu.html
@@ -16,11 +16,11 @@
             <a href="#" class="logo"><i class="fa-solid fa-house"></i>The Taste</a>
             <nav>
                 <ul>
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">Booking</a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="#">Topical</a></li>
-                    <li><a href="#">Accessibility</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="booking.html">Booking</a></li>
+                    <li><a href="menu.html" class="active">Menu</a></li>
+                    <li><a href="Topical.html">Topical</a></li>
+                    <li><a href="accessibility.html">Accessibility</a></li>
                 </ul>
             </nav>
            <div class="menu-toggle"><i class="fas fa-bars" aria-hidden="true"></i></div>
