--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
             <a href="#" class="logo"><i class="fa-solid fa-house"></i>The Taste</a>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="booking.html">Booking</a></li>
                     <li><a href="menu.html" class="active">Menu</a></li>
                     <li><a href="Topical.html">Topical</a></li>
