--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="activities-img-1" id="activities-info"></div>
                 <div class="activities-text-1" id="activities-info">
                     <h4>The Taste café</h4>
-                    <p>Our brand new café, now open, is truly a taste of wonder for everyone. With both vegan and halal options, we have strived to be able to cater to each and every one of our costumers. </p>
+                    <p>Our brand new café, now open, is truly a taste of wonder for everyone. With both vegan and halal options, we have strived to be able to cater to each and every one of our costumers. An extended drink menu is also in the works to make everything we can offer all the more explosive. The café is open for daily visits every single day, with freshly baked goods and the most delicious coffee in the city! Our café kitchen is also available for catering both small scale and large events.</p>
                 </div>
             </div>
 
