meeting room description

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style-header.css">
     <script src="https://kit.fontawesome.com/5196aeeac3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <title>The Taste home</title>
 </head>
 <body>
     <!--The header html attributes-->
@@ -100,7 +100,8 @@
             <div class="activities" id="meeting-room">
                 <div class="activities-img-2" id="activities-info"></div>
                 <div class="activities-text-2" id="activities-info">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi cum ea, natus pariatur excepturi omnis provident! Libero cumque alias quidem porro eum vero repudiandae quos ex dolores dolorem eligendi dolore nobis est aliquam laudantium labore, doloremque atque possimus ipsum minima sunt impedit? Doloribus hic, quas corrupti veritatis illum culpa aperiam delectus! Ipsam, nemo voluptatem repudiandae maiores nihil voluptates rerum praesentium perspiciatis blanditiis fuga. Eius quae ab maiores laborum quidem, qui iusto voluptates tempora asperiores, dolorem natus? Harum reprehenderit expedita accusantium ut, sint commodi velit aspernatur natus adipisci id aperiam dignissimos quisquam autem. Veniam velit voluptates suscipit placeat amet sunt voluptatibus?</p>
+                    <h4>Meetings rooms</h4>
+                    <p>A special meeting coming along? Simply want a change of pace, a new environment? Our meeting rooms are now available for booking! We can offer several types of meeting rooms depending on the amount of people that you want to room - too many and you might want want to consider our seminar rooms. Meeting rooms come with the equipment needed to show videos, presentations, hold pitches and even a show your briefings on our brand-new drawing boards. They're all well lit to promote a good working environment, and food from our The Taste café can be ordered as refreshments and brought up during the meeting, both on impulse and preplanned. </p>
                 </div>
             </div>
 
