party room description

--- a/index.html
+++ b/index.html
@@ -101,14 +101,15 @@
                 <div class="activities-img-2" id="activities-info"></div>
                 <div class="activities-text-2" id="activities-info">
                     <h4>Meetings rooms</h4>
-                    <p>A special meeting coming along? Simply want a change of pace, a new environment? Our meeting rooms are now available for booking! We can offer several types of meeting rooms depending on the amount of people that you want to room - too many and you might want want to consider our seminar rooms. Meeting rooms come with the equipment needed to show videos, presentations, hold pitches and even a show your briefings on our brand-new drawing boards. They're all well lit to promote a good working environment, and food from our The Taste café can be ordered as refreshments and brought up during the meeting, both on impulse and preplanned. </p>
+                    <p>A special meeting coming along? Simply want a change of pace, a new environment? Our meeting rooms are now available for booking! We can offer several types of meeting rooms depending on the amount of people that you want to room - too many and you might want want to consider our seminar rooms. Meeting rooms come with the equipment needed to show videos, presentations, hold pitches and even a show your briefings on our brand-new drawing boards. They're all well lit to promote a good working environment, and food from our The Taste café can be ordered as refreshments and brought up during the meeting, both on impulse and preplanned. Rooms can be booked online, in person and on phone. </p>
                 </div>
             </div>
 
             <div class="activities" id="party-room">
                 <div class="activities-img-3" id="activities-info"></div>
                 <div class="activities-text-3" id="activities-info">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae ipsam natus incidunt distinctio fuga. Perspiciatis, labore consequatur. Exercitationem ad odio pariatur tenetur cum ipsa nam aperiam optio non iste doloremque sequi esse earum corrupti atque dicta accusamus architecto laborum dolor, nobis eligendi sed tempora distinctio. Neque, totam perspiciatis. Inventore modi blanditiis esse, quos autem hic vitae vero culpa distinctio voluptatum et tempora omnis magnam aliquam nemo dolor id assumenda harum quam possimus reprehenderit ut eligendi totam? Nemo iusto error fugiat neque facere ipsum exercitationem architecto illum, quae sed placeat, dolor eligendi asperiores quos nisi accusamus quam at, dolorem voluptate? Dolorem..</p>
+                    <h4>Party halls / rroms</h4>
+                    <p>Been desperately looking for the perfect place to have <em>the best moment of your life?</em>Well, the wait is over! The taste now brings you our brand new bookable party halls! Our halls are super flexible and can be decorated and morphed into your dream scene, for each and every occasion. We different rooms are available for birthday parties and smaller gatherings, while our grand party hall is designed especially to be booked for large gatherings and wedding receptions, catering from our wonderful café included. Equipment for hiring in bands or djs is also ready to go! Rooms can be booked online, in person and on phone. </p>
                 </div>
             </div>
 
