seminar hal description

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
             <div class="activities" id="seminar-hall">
                 <div class="activities-img-4" id="activities-info"></div>
                 <div class="activities-text-4" id="activities-info">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum aut amet fugit impedit commodi distinctio? Omnis, voluptate earum asperiores voluptas esse vitae? Exercitationem quisquam itaque fugiat blanditiis architecto dolorem sint commodi assumenda expedita perferendis voluptates soluta enim suscipit voluptatibus nobis officia porro minima, earum harum similique aperiam. Exercitationem minus rem non ipsa, dolore inventore amet, qui quam aliquid natus esse magnam. Mollitia, consectetur! Eius doloremque nemo debitis? Excepturi, quae consectetur? Illo omnis voluptate ipsam soluta modi eveniet. Natus similique facilis impedit tempora non eos culpa officiis quis neque ut temporibus consequuntur ea dolor explicabo, omnis molestias consectetur eum nemo ullam..</p>
+                    <h4>Seminar hall</h4>
+                    <p>Large seminar hall available to rent by for large corporal and academic gatherings. There is only one large seminar hall and it can room around 300 people, and is fully equipped with projectors, audio systems, dynamic lights and high-end microphones for all occasions. This location can be doubled as an entertainment hall if needed. Note that in contrast to the other rooms and halls, the seminar hall does not offer space a space to eat and therefore catering is not available in the room itself - the café is always open for order, though. The seminar hall can be booked online, in person and on phone.</p>
                 </div>
             </div>
 
