--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Wlecome section.-->
         <section class="welcome">
             <div class="welcome-text">
-                <h1>Looking for the best of the best?<br>The Taste event house and café:</br> Here to make your dreams reality.</h1>
+                <h1>Looking for the best of the best?</br> The Taste, here to make your dreams reality.</h1>
                 <a href="#learn-more" class="butt">Learn more</a>
             </div>
         </section>
